<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_device"
    android:orientation="vertical"
    tools:context="com.lyx.classroom.room.DeviceActivity">

    <TextView
        android:id="@+id/tv_device_light_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/device_light_status_off"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_device_curtains_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/device_curtains_status_off"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_device_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_device_light_close" />

        <com.lyx.classroom.base.PanelLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_device_teach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:drawablePadding="4dp"
                android:drawableTop="@mipmap/ic_light_teach"
                android:gravity="center"
                android:text="@string/device_teach_mode"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_device_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:drawablePadding="4dp"
                android:drawableTop="@mipmap/ic_light_book"
                android:gravity="center"
                android:text="@string/device_book_mode"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_device_projection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:drawablePadding="4dp"
                android:drawableTop="@mipmap/ic_light_projection"
                android:gravity="center"
                android:text="@string/device_projection_mode"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_device_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:drawablePadding="4dp"
                android:drawableTop="@mipmap/ic_light_power"
                android:gravity="center"
                android:text="@string/device_power_mode"
                android:textColor="@color/white" />

        </com.lyx.classroom.base.PanelLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#20FFFFFF"
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_device_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_device_breeze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_device_breeze" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/device_breeze_mode"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sc_device_breeze"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:checked="false" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="14dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_device_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_device_curtains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_device_curtains" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/device_curtains_mode"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sc_device_curtains"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:checked="false" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_weight="2"
        android:background="@color/bg_device_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_device_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_device_air"
            android:gravity="center"
            android:text="@string/device_air_mode"
            android:textColor="@color/white" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_device_air_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/device_air_status"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_device_air_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:contentDescription="@string/app_name"
                    android:drawableLeft="@drawable/ic_device_air_power"
                    android:drawableStart="@drawable/ic_device_air_power" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/iv_device_air_reduce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_device_air_reduce" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:text="@string/device_air_temperature"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_device_air_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_device_air_increase" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

</LinearLayout>